--- a/app/views/application/show.html.erb
+++ b/app/views/application/show.html.erb
@@ -1,14 +1,14 @@
-<a href="<%=@app.facebook=%>"><h2><b><%=@app.name=%></b></h2></a> <p class="pine"><%=@app.memberstatus=%></p>
+<h2><b><%=@anything.name%></b></h2></a> <p class="pine"><%=@anything.memberstatus%></p>
 <div class="container">
   <div class="row">
-      <div class = "col-md-4"><img src="<%=@app.picture=%>" alt="" width="350px" height="250px"></div>
+      <div class = "col-md-4"><img src="<%=@anything.picture=%>" alt="" width="350px" height="250px"></div>
  
-    <div class="col-md-8"> <p><%=@app.bio=%></p>
+        <div class="col-md-8"> <p><%=@anything.bio%></p>
       <br>
       <br>
-      <p><b>Location:</b><%=@app.location=%></p>
+            <p><b>Location:</b><%=@anything.location%></p>
        <br>
-        <p><b>Completion:</b></p><div id=<%=@app.completion=%>>
+            <p><b>Completion:</b></p><div id=<%=@anything.completion%>>
         <div></div>
 </div>
       </div>
