--- a/app/views/application/show.html.erb
+++ b/app/views/application/show.html.erb
@@ -15,5 +15,6 @@
   </div>
 </div>
 <div>
-  <a href="/funbear/<%= @anything.id %>/edit">edit</a>
+  <a href="/funbear/<%= @anything.id %>/edit">edit</a> |
+  <a href="/funbear/ <%= @anything.id %>/destroy"> DELETE </a>
 </div>
